tests/ui/issues/issue-18611.stderr
error[E0277]: the trait bound `isize: HasState` is not satisfied
  --> $DIR/issue-18611.rs:1:18
   |
LL | fn add_state(op: <isize as HasState>::State) {
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `HasState` is not implemented for `isize`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/issue-18611.rs:5:1
   |
LL | trait HasState {
   | ^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
