tests/ui/issues/issue-18611.rs
fn add_state(op: <isize as HasState>::State) {
//~^ ERROR `isize: HasState` is not satisfied
}

trait HasState {
    type State;
}

fn main() {}
